--- a/style1.css
+++ b/style1.css
@@ -8,43 +8,13 @@ h1{
   color: black;
 }
 
-h3{
-  margin-left: 25px;
-  margin-right: 100px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-img{
-  border: 2px solid grey;
-  margin-left: 30px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-li{
-  margin-left: 30px;
-}
-
-h4{
-  margin-left: 30px;
-  margin-right: 100px;
-  margin-bottom: 10px;
-}
-
-#definition, #eval{
-  margin-left: 30px;
-  margin-right: 100px;
-  margin-top: 10px;
-}
-
-#opening {
+h2 {
   margin-left: 25px;
   margin-right: 100px;
   margin-top: 10px;
 }
 
-ul{
+p{
   margin-left: 30px;
   margin-right: 100px;
 }
@@ -57,23 +27,32 @@ ul{
 }
 
 #gradient{
-  margin-left: 300px;
+  margin-left: 70px;
 }
 
 #vmap {
   margin-top: 30px;
   margin-bottom: 0px;
-  margin-left: 300px;
+  margin-left: 30px;
 }
 
 #footer{
-  margin-top: -200px;
+  margin-top: -475px;
 }
 
 #myTable, th, td{
   text-align: center;
   padding: 5px;
   border: 1px solid black;
-  margin-left: 500px;
+  margin-left: 25px;
   margin-top: 10px;
+}
+
+#myDiv{
+  margin-left: 100px;
+}
+
+#button{
+  margin-top: -120px;
+  margin-left: 25px;
 }
