--- a/views/global/micromap.ejs
+++ b/views/global/micromap.ejs
@@ -14,7 +14,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      al: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      al: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -31,7 +31,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ak: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ak: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -48,7 +48,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      az: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      az: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -65,7 +65,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ca: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ca: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -82,7 +82,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      co: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      co: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -99,7 +99,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ct: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ct: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -116,7 +116,7 @@ jQuery(document).ready(function() {
 borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      de: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      de: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -133,7 +133,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      dc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      dc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -150,7 +150,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ga: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ga: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -169,7 +169,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      il: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      il: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -186,7 +186,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      in: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      in: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -203,7 +203,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ia: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ia: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -220,7 +220,7 @@ jQuery(document).ready(function() {
 borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ks: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ks: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -237,7 +237,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ky: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ky: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -254,7 +254,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      la: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      la: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -271,7 +271,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      me: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      me: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -288,7 +288,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      md: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      md: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -305,7 +305,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ma: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ma: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -322,7 +322,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      mi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      mi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -339,7 +339,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      mn: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      mn: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -356,7 +356,7 @@ jQuery(document).ready(function() {
 borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      mo:'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      mo:'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -373,7 +373,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ne: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ne: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -390,7 +390,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      nv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      nv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -407,7 +407,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      nh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      nh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -424,7 +424,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      nj: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      nj: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -441,7 +441,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      nm: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      nm: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -458,7 +458,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ny: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ny: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -475,7 +475,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      nc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      nc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -492,7 +492,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      oh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      oh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -509,7 +509,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ok: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ok: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -526,7 +526,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      or: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      or: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -543,7 +543,7 @@ jQuery(document).ready(function() {
 borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      pa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      pa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -560,7 +560,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ri: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ri: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -577,7 +577,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      sc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      sc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -594,7 +594,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      ut: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      ut: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -611,7 +611,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      vt: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      vt: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -628,7 +628,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      va: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      va: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -645,7 +645,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      wa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      wa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -662,7 +662,7 @@ jQuery(document).ready(function() {
   borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      wv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      wv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -679,7 +679,7 @@ jQuery(document).ready(function() {
     borderColor: 'black',
     hoverOpacity: .5,
     colors: {
-      wi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
+      wi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("microtable").rows[1].cells[3].innerHTML.substring(5,7),2)/25) + '%' +")"
     }
   });
 });
@@ -690,14 +690,22 @@ jQuery(document).ready(function() {
 <div id="myDiv" style = "position:relative; left:700px; top:-400px;">
 <script>
 
+  var ultimateColors =
+    ['rgb(191, 54, 54)', 'rgb(46, 0, 0)' ,'rgb(168, 0, 0)', 'rgb(255, 0, 0)','rgb(158, 27, 27)', 'rgb(207, 62, 62)', 'rgb(214, 99, 99)', 'rgb(184, 112, 112)', 'rgb(212, 146, 146)', 'rgb(227, 179, 179)',  'rgb(240, 221, 221)'
+    ]
+;
+
 for(var i=2;i<10;i++){
 var pie = [{
-  values: [document.getElementById("myTable").rows[1].cells[4].innerHTML, document.getElementById("myTable").rows[1].cells[5].innerHTML, document.getElementById("myTable").rows[1].cells[6].innerHTML, document.getElementById("myTable").rows[1].cells[7].innerHTML,
-  document.getElementById("myTable").rows[1].cells[8].innerHTML, document.getElementById("myTable").rows[1].cells[9].innerHTML, document.getElementById("myTable").rows[1].cells[10].innerHTML, document.getElementById("myTable").rows[1].cells[11].innerHTML,
-  document.getElementById("myTable").rows[1].cells[12].innerHTML, document.getElementById("myTable").rows[1].cells[13].innerHTML, document.getElementById("myTable").rows[1].cells[14].innerHTML],
+  values: [document.getElementById("microtable").rows[1].cells[4].innerHTML, document.getElementById("microtable").rows[1].cells[5].innerHTML, document.getElementById("microtable").rows[1].cells[6].innerHTML, document.getElementById("microtable").rows[1].cells[7].innerHTML,
+  document.getElementById("microtable").rows[1].cells[8].innerHTML, document.getElementById("microtable").rows[1].cells[9].innerHTML, document.getElementById("microtable").rows[1].cells[10].innerHTML, document.getElementById("microtable").rows[1].cells[11].innerHTML,
+  document.getElementById("microtable").rows[1].cells[12].innerHTML, document.getElementById("microtable").rows[1].cells[13].innerHTML, document.getElementById("microtable").rows[1].cells[14].innerHTML],
   labels: ['Firearm','Cut/Pierce','Struck by/against','Poisoning','Hanging/Suffocation','Fall','Drowning','Fire/Burn','Motor vehicle','Other','Unknown'],
-  type: 'pie'
-}];
+  type: 'pie',
+  marker: {
+     colors: ultimateColors
+   },
+ }];
 
 var layout = {
   height: 400,
