--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title> microdata</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" type = "text/css" href="style1.css">
+  <link rel="stylesheet" type = "text/css" href="style.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Maia and Ryan">
@@ -51,7 +51,9 @@
     <%}}}}}%>
     <%console.log(max,method) %>
 
+    <div id="desc">
     <p> This is the "microdata" for <%= data[myPage].state %>. Here you will find a visualization of the state's death:population ratio as well as a pie chart detailing the methods of death.  </p>
+    <p> <%= data[myPage].state %> has a total population of <%= data[myPage].population %> </p>
 
 
     <%if(method == "firearm"){%>
@@ -67,13 +69,13 @@
       <%if(data[myPage].ratio >= avg_rates){%>
         <p> <%= data[myPage].state %> has a greater rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of  <%=data[myPage].ratio %>: 1 . Unfortunately, this means it is NOT a very SAFE state with <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths. </p>
         <%}%>
-
+</div>
 
 
 
 
   <section id="data info">
-    <table id="myTable">
+    <table id="microtable">
       <tr>
         <% for(let i in data[myPage]){ %>
           <%if(i !== "number"){%>
@@ -93,10 +95,10 @@
 
   </section>
 
-  <div id="vmap" style="width: 600px; height: 400px;">
+  <div id="vmap" style="width: 600px; height: 400px; left:-270px;" >
     <%- include ('global/micromap');  %>
   </div>
-  <div id="gradient">
+  <div id="gradient-micro">
  <img src="pictures/key.png" alt="key" width="auto" height="300" style = "position:relative; left:600px; top:-750px;">
 </div>
 
@@ -115,7 +117,7 @@
     <a class="btn btn-outline-danger" style = "position:relative;  top:-500px;"href=<%=next%> role="button">next page</a>
   <%}%>
 </div>
-<div id = "footer">
+<div id = "footer-micro">
   <%- include ('global/footer');  %>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
