--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ h1{
   margin-left: 10px;
   margin-top: 30px;
   color: red;
-  font-family: Verdana;
   font-weight: bold;
 
 }
@@ -129,4 +128,12 @@ visibility: hidden;
 #button{
   margin-top: -120px;
   margin-left: 25px;
+}
+
+
+
+#definition{
+  background-color: pink;
+  border-color: grey;
+  border-radius: 2px;
 }
