--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,12 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type = "text/css" href="style.css">
 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,84 +34,113 @@
 
   <h3> Lo-Fi Wireframe Sketches + Analysis </h3>
 
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" width="400" height="auto">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" width="400" height="auto">
+        <div class="carousel-item active" width="400" height="auto" >
+            <img class="d-block" src="pictures/maia_1.jpeg" alt="Maia Main" width="auto" height="400">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
 
-  <h4> Maia's Macro Sketch </h4>
-  <div id="img">
-<img src="pictures/maia_1.jpeg" alt="maia main" width="400" height="auto">
-</div>
-  <ol>
-    <li>UNDERSTANDABILITY: This map is very understandable. It is clear that a darker color means a higher percentage of violent deaths in that location. The key adds to this understandability. The map doesn’t show, though, anything about the
-      mechanism used. This is only found in the individual state section. I think this is okay, though, because it helps not overwhelm the reader. In addition, the summery at the top will clear up any confusion.
-    </li>
-    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
-    </li>
-    <li>SIGNIFIERS: The about button in the top right and the bar with a list of micro summery states make it clear that you can click these sections for other pages. It is not clear, though, whether you can click the states themselves. It will be
-      necessary to add a signifier there.
-    </li>
-    <li>MAPPINGS: It is clear that the page is mapping data on the percentage of deaths based on state to the US map.
-    </li>
-    <li>PERCEPTIBILITY: This layout is perceptible. Using shades rather than different colors make its it clear to even color blind users and the summery and title at the top allow blind users to use text to speech. It also does not overwhelm the
-      user with too much information (for example showing percentage and mechanism)
-    </li>
-  </ol>
+                <h4>Maia's Macro Sketch</h4>
 
-  <h4> Maia's Micro Sketch </h4>
-  <div id="img">
-<img src="pictures/maia_2.jpeg" alt="maia mini" width="400" height="auto">
-</div>
-  <ol>
-    <li>UNDERSTANDABILITY: The pie chart is understandable, showing that bigger pieces of the pie relate to a higher percentage of that weapon used. The key makes the pie chart explicitly understandable as well by labeling the colors. In addition,
-      the sentence at the top of the page adds to this understandability. It might be interesting to try to contextualize this pie chart by comparing it to the frequency of violent deaths in the state as a whole to make the data more understandable.
-    </li>
-    <li>ACHIEVABILITY: D3 allows you to create pie charts and HTML allows you to create buttons and text
-    </li>
-    <li>SIGNIFIERS: It is clear that the buttons at the bottom of the page are clickable. It might be interesting to depict whether you can highlight each section of the pie chart in order to get more info about it.
-    </li>
-    <li>MAPPINGS: it is clear that the data about percentage of homicides by weapon is being mapped to a pie chart.
-    </li>
-    <li>PRECEPTIBILITY: The use of shades over different colors makes the pie chart perceptible to a colorblind person and the text at the top of the page makes it perceptible to a blind person through text to speech. It might be useful to use the
-      same colors as the US map to show that stuff corresponds, but also the blue might work as the US map is about number of deaths while this chart is about type of death.
-    </li>
-  </ol>
+                <ol>
+                  <li>UNDERSTANDABILITY: This map is very understandable. It is clear that a darker color means a higher percentage of violent deaths in that location. The key adds to this understandability. The map doesn’t show, though, anything about the
+                    mechanism used. This is only found in the individual state section. I think this is okay, though, because it helps not overwhelm the reader. In addition, the summery at the top will clear up any confusion.
+                  </li>
+                  <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
+                  </li>
+                  <li>SIGNIFIERS: The about button in the top right and the bar with a list of micro summery states make it clear that you can click these sections for other pages. It is not clear, though, whether you can click the states themselves. It will be
+                    necessary to add a signifier there.
+                  </li>
+                  <li>MAPPINGS: It is clear that the page is mapping data on the percentage of deaths based on state to the US map.
+                  </li>
+                  <li>PERCEPTIBILITY: This layout is perceptible. Using shades rather than different colors make its it clear to even color blind users and the summery and title at the top allow blind users to use text to speech. It also does not overwhelm the
+                    user with too much information (for example showing percentage and mechanism)
+                  </li>
+                </ol>
+        </div>
+        <div class="carousel-item" width="400" height="auto">
+          <img class="d-block " src="pictures/maia_2.jpeg" alt="Maia Micro" width="auto" height="400">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
 
-  <h4> Ryan's Macro Sketch </h4>
-  <div id="img">
-<img src="pictures/ryan_1.jpeg" alt="ryan main" width="400" height="auto">
-</div>
-  <ol>
-    <li>UNDERSTANDABILITY: Hard to know what colors would mean. Definitely need a key to show what color represents what mechanism. Might not be that interesting because for most states, the most popular mechanism was a gun. The fact that the data
-      differs by location, though, is understandable due to the map. The data is all pretty visible and consistent.
-    </li>
-    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
-    </li>
-    <li>SIGNIFIERS: not many signifiers showing if you can click anything. Perhaps add outlines to the states to show they are highlightable and clickable or hyperlinks in a description
-    </li>
-    <li>MAPPINGS: this was pretty successful in this example. Quite literally mapping mechanism based on location.
-    </li>
-    <li>PERCEPTIBILITY: This infographic isn’t perceptible to a blind user. Perhaps include a paragraph with descriptions to use text to speech. In addition, the use of different colors may be hard to understand by a colorblind user. Instead, maybe
-      color the map with different shades of the same color
-    </li>
-  </ol>
+            <h4>Maia's Micro Sketch</h4>
 
-  <h4> Ryan's Micro Sketch </h4>
-  <div id="img">
-<img src="pictures/ryan_2.jpeg" alt="ryan mini" width="400" height="auto">
+            <ol>
+              <li>UNDERSTANDABILITY: The pie chart is understandable, showing that bigger pieces of the pie relate to a higher percentage of that weapon used. The key makes the pie chart explicitly understandable as well by labeling the colors. In addition,
+                the sentence at the top of the page adds to this understandability. It might be interesting to try to contextualize this pie chart by comparing it to the frequency of violent deaths in the state as a whole to make the data more understandable.
+              </li>
+              <li>ACHIEVABILITY: D3 allows you to create pie charts and HTML allows you to create buttons and text
+              </li>
+              <li>SIGNIFIERS: It is clear that the buttons at the bottom of the page are clickable. It might be interesting to depict whether you can highlight each section of the pie chart in order to get more info about it.
+              </li>
+              <li>MAPPINGS: it is clear that the data about percentage of homicides by weapon is being mapped to a pie chart.
+              </li>
+              <li>PRECEPTIBILITY: The use of shades over different colors makes the pie chart perceptible to a colorblind person and the text at the top of the page makes it perceptible to a blind person through text to speech. It might be useful to use the
+                same colors as the US map to show that stuff corresponds, but also the blue might work as the US map is about number of deaths while this chart is about type of death.
+              </li>
+            </ol>
+
+        </div>
+        <div class="carousel-item" width="400" height="auto">
+          <img class="d-block " src="pictures/ryan_1.jpeg" alt="Ryan Main" width="auto" height="400">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+
+            <h4>Ryan's Macro Sketch</h4>
+          <ol>
+            <li>UNDERSTANDABILITY: Hard to know what colors would mean. Definitely need a key to show what color represents what mechanism. Might not be that interesting because for most states, the most popular mechanism was a gun. The fact that the data
+              differs by location, though, is understandable due to the map. The data is all pretty visible and consistent.
+            </li>
+            <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
+            </li>
+            <li>SIGNIFIERS: not many signifiers showing if you can click anything. Perhaps add outlines to the states to show they are highlightable and clickable or hyperlinks in a description
+            </li>
+            <li>MAPPINGS: this was pretty successful in this example. Quite literally mapping mechanism based on location.
+            </li>
+            <li>PERCEPTIBILITY: This infographic isn’t perceptible to a blind user. Perhaps include a paragraph with descriptions to use text to speech. In addition, the use of different colors may be hard to understand by a colorblind user. Instead, maybe
+              color the map with different shades of the same color
+            </li>
+          </ol>
+      </div>
+
+        <div class="carousel-item" width="400" height="auto">
+          <img class="d-block " src="pictures/ryan_2.jpeg" alt="Ryan Micro" width="auto" height="400">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+
+            <h4>Ryan's Micro Sketch</h4>
+          <ol>
+            <li>UNDERSTANDABILITY: The use of both a colored map and a table seem really beneficial here. The map contextualizes the violent deaths in this location. It is hard to understand, though, what this color may represent so a key would be useful.
+              The table gives more data, allowing for a more interesting infographic than just a colored in state. All data is visible and you don’t need to click anything to access important info. The colors here are not consistent with the colors on the
+              landing page. It might make more sense to use the same colors. The page is simplistic and allows for readability.
+            </li>
+            <li>ACHIEVABILITY: Plotly allows you to depict data in states and HTML allows you to make a table
+            </li>
+            <li>SIGNIFIERS: there are no buttons on this sketch so the user doesn’t know if anything is clickable or how to interact with the page
+            </li>
+            <li>MAPPINGS: Here we are mapping the data about homicides to the map and the table. Both are clear, especially since the table is labeled. It might be beneficial to include a key to indicate what the color of the state maps to data-wise.
+            </li>
+            <li>PERCEPTIBILITY: This layout is very perceptible. There is only one color so it will be understandable by the colorblind and the table clearly labels all its data. The only issue that may arise with a table is that if it gets filled with too
+              much data, it can be overwhelming. This should not be an issue for this example, though, as there will be less than ten rows (because we only have data for less than ten mechanisms)
+            </li>
+          </ol>
+        </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" color = "black">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" color = "black">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
-  <ol>
-    <li>UNDERSTANDABILITY: The use of both a colored map and a table seem really beneficial here. The map contextualizes the violent deaths in this location. It is hard to understand, though, what this color may represent so a key would be useful.
-      The table gives more data, allowing for a more interesting infographic than just a colored in state. All data is visible and you don’t need to click anything to access important info. The colors here are not consistent with the colors on the
-      landing page. It might make more sense to use the same colors. The page is simplistic and allows for readability.
-    </li>
-    <li>ACHIEVABILITY: Plotly allows you to depict data in states and HTML allows you to make a table
-    </li>
-    <li>SIGNIFIERS: there are no buttons on this sketch so the user doesn’t know if anything is clickable or how to interact with the page
-    </li>
-    <li>MAPPINGS: Here we are mapping the data about homicides to the map and the table. Both are clear, especially since the table is labeled. It might be beneficial to include a key to indicate what the color of the state maps to data-wise.
-    </li>
-    <li>PERCEPTIBILITY: This layout is very perceptible. There is only one color so it will be understandable by the colorblind and the table clearly labels all its data. The only issue that may arise with a table is that if it gets filled with too
-      much data, it can be overwhelming. This should not be an issue for this example, though, as there will be less than ten rows (because we only have data for less than ten mechanisms)
-    </li>
-  </ol>
+
   <br>
   <h3> Final Design Elements </h3>
   <p>
