--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,19 +13,19 @@
 
   <%- include ('global/header');  %>
 
-  <h1> About Page</h1>
+  <h1> What states are safest?</h1>
   <h3> Useful Definitions </h3>
   <div id="definition">
   <p>
-    death by unnatural causes: an untimely teast brought about by methods other than natural, bodily causes such as sickness or old age
+    <h5> death by unnatural causes: </h5> an untimely teast brought about by methods other than natural, bodily causes such as sickness or old age
     <br>
-    cause of death by unnatural causes: the tool or action that brought about an unnatural death such as a cut, a firearm, or a fire.
+    <h5>cause of death by unnatural causes: </h5>the tool or action that brought about an unnatural death such as a cut, a firearm, or a fire.
     <br>
-    ratio: the amount of people who die by unnatural causes in a given state divided by the amount of people who live in the state
+  <h5>  ratio: </h5>the amount of people who die by unnatural causes in a given state divided by the amount of people who live in the state
     <br>
-    macrodata: the data describing a big territory, here, the united states
+    <h5>macrodata: </h5>the data describing a big territory, here, the united states
     <br>
-    microdata: the data describing a smaller territory, here, a specific state
+  <h5>  microdata: </h5>the data describing a smaller territory, here, a specific state
     <br>
 
   </p>
