--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -93,7 +93,7 @@
 
   </section>
 
-  <div id="vmap" style="width: 600px; height: 400px; left:-270px;" >
+  <div id="vmap" style="width: 600px; height: 400px;" >
     <%- include ('global/micromap');  %>
   </div>
   <div id="gradient-micro">
