--- a/views/global/micromap.ejs
+++ b/views/global/micromap.ejs
@@ -687,7 +687,7 @@ jQuery(document).ready(function() {
 
 </script>
 </div>
-<div id="myDiv" style = "width: 700px; height: auto">
+<div id="myDiv">
 <script>
 
   var ultimateColors =
