--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -93,11 +93,13 @@
 
   </section>
 
+<div id = "maps">
   <div id="vmap" style="width: 600px; height: 400px; left:-270px;" >
     <%- include ('global/micromap');  %>
   </div>
   <div id="gradient-micro">
- <img src="pictures/key.png" alt="key" width="auto" height="300" style = "position:relative; left:600px; top:-750px;">
+ <img src="pictures/key.png" alt="key" width="auto" height="300" style = "position:relative; left:850px; top:-850px;">
+</div>
 </div>
 
 
