--- a/style.css
+++ b/style.css
@@ -120,10 +120,12 @@ visibility: hidden;
 
 
 
-#definition{
+#definition, #sketch, #design, #pipeline{
   background-color: pink;
   border-color: grey;
   border-radius: 2px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 #button{
@@ -137,5 +139,11 @@ margin-top: 10px;
 
 #footer-micro{
   margin-top: -200px;
+
+}
+
+#sktch{
+  margin-left: auto;
+  margin-right: auto;
 
 }
