--- a/views/global/micromap.ejs
+++ b/views/global/micromap.ejs
@@ -5,11 +5,10 @@ let str = document.querySelector("h2").innerText
 if(str == "Alabama Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
-
     borderWidth: 2,
     borderColor: 'black',
     hoverOpacity: .5,
@@ -23,7 +22,7 @@ jQuery(document).ready(function() {
 if(str == "Alaska Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -40,7 +39,7 @@ jQuery(document).ready(function() {
 if(str == "Arizona Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+  backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -57,7 +56,7 @@ jQuery(document).ready(function() {
 if(str == "California Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+  backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -74,7 +73,7 @@ jQuery(document).ready(function() {
 if(str == "Colorado Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
