--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-
+<div id="navbar">
   <%- include ('global/header');  %>
-
+</div>
   <header>
 
     <h1>What states are safest?</h1>
@@ -40,7 +40,7 @@
 
   </header>
 
-<div id="vmap" style="width: 600px; height: 400px;" >
+<div id="vmap">
 <%- include ('global/macromap');  %>
 
 </div>
