--- a/views/global/macromap.ejs
+++ b/views/global/macromap.ejs
@@ -26,7 +26,7 @@ let index = [
 
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#d1d5d9',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
